force-app/main/default/objects/Regression_Test_Result__c/Regression_Test_Result__c.object-meta.xml
<CustomObject>
    <description>Stores the outcome of an individual test case within a regression test run, including pass/fail status, error details, and execution log.</description>
    <label>Regression Test Result</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regression Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>