force-app/main/default/objects/Regression_Test_Result__c/fields/Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>Actual_Result__c</fullName>
    <label>Actual Result</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>