force-app/main/default/objects/Regression_Test_Result__c/fields/Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_Ms__c</fullName>
    <description>Execution time in milliseconds</description>
    <label>Duration (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>