force-app/main/default/objects/Regression_Test_Result__c/fields/Execution_Log__c.field-meta.xml
<CustomField>
    <fullName>Execution_Log__c</fullName>
    <description>Full execution output</description>
    <label>Execution Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>