force-app/main/default/objects/Regression_Test_Result__c/fields/External_Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Ticket_Id__c</fullName>
    <description>Reference to an external tracking system ticket (e.g. Jira, Azure DevOps)</description>
    <label>External Ticket Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>