force-app/main/default/objects/Regression_Test_Result__c/fields/Is_Known_Issue__c.field-meta.xml
<CustomField>
    <fullName>Is_Known_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this test failure as a known issue to exclude from regression counts.</description>
    <label>Is Known Issue</label>
    <type>Checkbox</type>
</CustomField>