force-app/main/default/objects/Regression_Test_Result__c/fields/Is_Regression__c.field-meta.xml
<CustomField>
    <fullName>Is_Regression__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if test previously passed and now fails</description>
    <label>Is Regression</label>
    <type>Checkbox</type>
</CustomField>