force-app/main/default/objects/Regression_Test_Result__c/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Status from previous run for comparison</description>
    <label>Previous Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>