force-app/main/default/objects/Regression_Test_Result__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Case</label>
    <referenceTo>Regression_Test_Case__c</referenceTo>
    <relationshipLabel>Test Results</relationshipLabel>
    <relationshipName>Test_Results_for_Case</relationshipName>
    <type>Lookup</type>
</CustomField>