force-app/main/default/objects/Regression_Test_Result__c/fields/Test_Run__c.field-meta.xml
<CustomField>
    <fullName>Test_Run__c</fullName>
    <label>Test Run</label>
    <referenceTo>Regression_Test_Run__c</referenceTo>
    <relationshipLabel>Test Results</relationshipLabel>
    <relationshipName>Test_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>