force-app/main/default/objects/Regression_Test_Result__c/validationRules/Error_Message_Required_For_Failed.validationRule-meta.xml
<ValidationRule>
    <fullName>Error_Message_Required_For_Failed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Status__c, &apos;Failed&apos;), ISPICKVAL(Status__c, &apos;Config Error&apos;), ISPICKVAL(Status__c, &apos;Warning&apos;)), ISBLANK(Error_Message__c))</errorConditionFormula>
    <errorDisplayField>Error_Message__c</errorDisplayField>
    <errorMessage>Error Message is required when status is Failed, Config Error, or Warning.</errorMessage>
</ValidationRule>