force-app/main/default/objects/Regression_Test_Result__c/listViews/All_Results.listView-meta.xml
<ListView>
    <fullName>All_Results</fullName>
    <columns>NAME</columns>
    <columns>Test_Run__c</columns>
    <columns>Test_Case__c</columns>
    <columns>Status__c</columns>
    <columns>Layer__c</columns>
    <columns>Duration_Ms__c</columns>
    <columns>Is_Regression__c</columns>
    <columns>Is_Known_Issue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Results</label>
</ListView>