force-app/main/default/objects/Regression_Test_Result__c/listViews/Failed_Results.listView-meta.xml
<ListView>
    <fullName>Failed_Results</fullName>
    <columns>NAME</columns>
    <columns>Test_Run__c</columns>
    <columns>Test_Case__c</columns>
    <columns>Layer__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Duration_Ms__c</columns>
    <columns>Is_Regression__c</columns>
    <columns>External_Ticket_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Results</label>
</ListView>