force-app/main/default/objects/Regression_Test_Result__c/listViews/Regression_Results.listView-meta.xml
<ListView>
    <fullName>Regression_Results</fullName>
    <columns>NAME</columns>
    <columns>Test_Run__c</columns>
    <columns>Test_Case__c</columns>
    <columns>Layer__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Duration_Ms__c</columns>
    <columns>Is_Known_Issue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Regression__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Regression Results</label>
</ListView>